Trying to stop the white flash on page reload while in dark mode

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -40,15 +40,15 @@ colors
   }
 }
 
+html {
+  background-color: rgb(14, 18, 40);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-size: 62.5%;
-}
-
-body {
-  background-color: #545454;
 }
 
 .container {
@@ -67,12 +67,21 @@ body {
 
 .sidebar {
   grid-area: sb;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
   background-color: var(--sidebar-color);
 }
 
+.icon:first-child {
+  margin-top: 2rem;
+}
+
 .icon {
-  width: 2rem;
-  height: 2rem;
+  width: 2.4rem;
+  height: 2.4rem;
 }
 
 .home-icon {
